cmake_minimum_required(VERSION 3.7)

project(cpp1)

include(cpp1-local.cmake)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

set(CMAKE_INCLUDE_CURRENT_DIR TRUE)
#set(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake" ${CMAKE_MODULE_PATH})
LIST( APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake )

if (NOT DEFINED ENV{ANYSOLO_LIB_CPP_STUDENTS})
message(FATAL_ERROR "You must set environment variable 'ANYSOLO_LIBS_CPP_STUDENTS'")
endif ()

SET(ANYSOLO_LIB_STUDENTS $ENV{ANYSOLO_LIB_CPP_STUDENTS} )

include_directories(. ${ANYSOLO_LOCAL_INC} ${ANYSOLO_LIB_STUDENTS}/src)
link_directories( ${ANYSOLO_LOCAL_LIB} ${ANYSOLO_LIB_STUDENTS}/lib)

set(CMAKE_CXX_STANDARD 20)

if (CMAKE_CXX_COMPILER_ID MATCHES "GNU")
set(CMAKE_CXX_FLAGS -Wall)
elseif (CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
	set(CMAKE_CXX_FLAGS /EHsc)
else()
	message(FATAL_ERROR "Unsupported compiler")
endif()


set(EXT_LIBS_PATH ${PROJECT_SOURCE_DIR}/ext-libs)

enable_testing()
include(Catch)


set(MAIN_BIN_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)
set(MAIN_LIB_DIRECTORY ${PROJECT_SOURCE_DIR}/lib)


file(GLOB EXT_LIBS_HEADERS ${EXT_LIBS_PATH}/*.h*)

add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/cpp1/level1)
